# CGTests

./: CMakeLists.txt  README.md
src/: Bitmap.h  Filters.cpp  Filters.h  Main2.cpp  Matrix.h  OCLTest.cpp  PathTracing.cpp  PathTracing2.cpp  Simulation1.cpp  Tensor.h  Texture1.cpp  Texture2.cpp  Utils.cpp  Utils.h
